change pin's api and make pin's tests parallel
