# docs/swagger.yaml
@@ -603,7 +603,7 @@ paths:
             投稿に失敗しました。
             指定したユーザーは存在しません。
 
-  /channels/{channelID}/pin:
+  /channels/{channelID}/pins:
     parameters:
       - $ref: "#/components/parameters/channelIdInPath"
     get:
@@ -618,6 +618,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PinList"
+
+  /pins:
     post:
       tags:
         - pin
@@ -647,7 +649,7 @@ paths:
                     format: uuid
                     description: ピンID
 
-  /pin/{pinID}:
+  /pins/{pinID}:
     parameters:
       - $ref: "#/components/parameters/pinIdInPath"
     get:
